cabal-version:       >=1.10

name:                beta-code
version:             0.1.0.0
author:              Paweł Placzyński
maintainer:          placzynski.pawel@gmail.com
build-type:          Simple

library
  exposed-modules:     BetaCode
  build-depends:       base >=4.12 && <4.13
                     , text
                     , bytestring
                     , stringsearch
  hs-source-dirs:      src
  default-language:    Haskell2010
