cabal-version:         >=1.10

name:                  beta-code
version:               0.1.0.0
author:                Paweł Placzyński
maintainer:            placzynski.pawel@gmail.com
build-type:            Simple

library
  exposed-modules:     BetaCode
                     , BetaCode.Rules
                     , BetaCode.Parser
  build-depends:       base >=4.12 && <4.13
                     , text
                     , bytestring
                     , stringsearch
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      spec
  build-depends:       base >=4.12 && <4.13
                     , hspec ==2.*
                     , text
                     , bytestring
                     , beta-code
  other-modules:       BetaCodeSpec
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
